--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Flask==2.0.2
+Flask==3.0.2
 requests>=2.26.0
 SQLAlchemy==1.4.32
 aiomysql==0.0.21
 flask_cors==3.0.10
-Flask[async]==2.0.2
+Flask[async]==3.0.2
+Werkzeug>=2.0
+pyjwt==2.8.0
